--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -33,6 +33,10 @@
         .shadow {
             box-shadow: 0 2px 12px 0 rgb(0 0 0)
         }
+
+        #list {
+            opacity: 60%;
+        }
     </style>
 </head>
 <body style="background-size:cover;background-position:center; background-attachment:fixed; background-repeat:no-repeat;background-image: url('https://cdn.jsdelivr.net/gh/TildenJ/pics@pics/images/2021/06/f2927c5ab3954098e1f1afeaa137058_801d339fcac1929f9551ff490a59770c.jpg')">
