--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -43,17 +43,17 @@
 <div style="text-align: center"><img class="shadow" style="height: 150px; border-radius: 10px;"
                                      src="https://cdn.jsdelivr.net/gh/TildenJ/pics@pics/images/2021/06/b20e240128e000e430b4a4959a9bc1c3_1_84a509cbac3aa04362fe981f992da70e.jpg"/>
 </div>
-<div class="box" style="text-align: center">
+<!-- <div class="box" style="text-align: center">
     <input class="shadow" style="width: 50%" id="txtURL" type="text" value="www.google.com" autofocus>
 </div>
 <div class="box" style="text-align: center">
     <button id="btnGo" style="width: 50%" class="shadow">Go</button>
-</div>
+</div> -->
 <div class="box" style="display: none">
     <span>切换线路:</span>
     <select id="selNode"></select>
 </div>
-<div class="box" id="list">
+<div class="box" id="list" style="display: none">
 </div>
 <script>
     const PAGE_CONF_SET = 110
